Config info.plist

--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -47,5 +47,14 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+    <!-- Security Suite -->
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>undecimus</string>
+        <string>sileo</string>
+        <string>zbra</string>
+        <string>filza</string>
+        <string>activator</string>
+    </array>
 </dict>
 </plist>
