Add scheme <string>cydia</string>

--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -55,6 +55,7 @@
         <string>zbra</string>
         <string>filza</string>
         <string>activator</string>
+        <string>cydia</string>
     </array>
 </dict>
 </plist>
