--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,4 +54,5 @@ android {
 dependencies {
     implementation "androidx.annotation:annotation:1.5.0"
     implementation 'com.scottyab:rootbeer-lib:0.1.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 }
