--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,20 @@
 name: jailbreak_root_detection
-description: A new Flutter project.
+description: Uses RootBeer + DetectFrida for Android root detection and IOSSecuritySuite for iOS jailbreak detection.
 version: 0.0.1
-homepage:
+homepage: https://github.com/w3connext/jailbreak_root_detection
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=2.18.0 <3.0.0'
   flutter: ">=2.5.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
