--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,6 +52,8 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: "libs", include: ["*.jar", "*.aar"])
+
     implementation "androidx.annotation:annotation:1.5.0"
     implementation 'com.scottyab:rootbeer-lib:0.1.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
