--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,7 +52,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar", "*.aar"])
+    implementation files('libs/magisk-detector.aar')
 
     implementation "androidx.annotation:annotation:1.5.0"
     implementation 'com.scottyab:rootbeer-lib:0.1.0'
