--- a/android/build.gradle
+++ b/android/build.gradle
@@ -42,6 +42,10 @@ android {
 
     defaultConfig {
         minSdkVersion 21
+
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+        }
     }
 
     externalNativeBuild {
