--- a/android/build.gradle
+++ b/android/build.gradle
@@ -42,17 +42,14 @@ android {
 
     defaultConfig {
         minSdkVersion 21
-
-        ndk {
-            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
-        }
     }
 
-    externalNativeBuild {
-        cmake {
-            path "src/main/c/CMakeLists.txt"
-        }
-    }
+    // TODO uncomment when run: ./gradlew assembleRelease
+//    externalNativeBuild {
+//        cmake {
+//            path "src/main/c/CMakeLists.txt"
+//        }
+//    }
 }
 
 dependencies {
