--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -2,3 +2,4 @@ org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
 android.suppressUnsupportedCompileSdk=33
+android.useDeprecatedNdk=true
