--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.w3conext.jailbreak_root_detection">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
