--- a/android/build.gradle
+++ b/android/build.gradle
@@ -44,12 +44,12 @@ android {
         minSdkVersion 21
     }
 
-    externalNativeBuild {
-        cmake {
-            path file('src/main/cpp/CMakeLists.txt')
-            version '3.22.1'
-        }
-    }
+//    externalNativeBuild {
+//        cmake {
+//            path file('src/main/cpp/CMakeLists.txt')
+//            version '3.22.1'
+//        }
+//    }
 }
 
 dependencies {
