--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.7
 homepage: https://github.com/w3connext/jailbreak_root_detection
 
 environment:
-  sdk: '>=2.18.0 <=4.0.0'
+  sdk: '>=2.18.0 <4.0.0'
   flutter: ">=2.5.0"
 
 dependencies:
