--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,14 +2,14 @@ group 'com.w3conext.jailbreak_root_detection'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.7.21'
+    ext.kotlin_version = '1.9.10'
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath 'com.android.tools.build:gradle:8.7.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -29,15 +29,13 @@ android {
         namespace 'com.w3conext.jailbreak_root_detection'
     }
 
-    compileSdkVersion 33
-
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = '11'
+        jvmTarget = '17'
     }
 
     sourceSets {
@@ -46,12 +44,13 @@ android {
 
     defaultConfig {
         minSdkVersion 21
+        compileSdk 33
     }
     
 }
 
 dependencies {
-    implementation "androidx.annotation:annotation:1.5.0"
-    implementation 'com.scottyab:rootbeer-lib:0.1.0'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    implementation "androidx.annotation:annotation:1.9.1"
+    implementation 'com.scottyab:rootbeer-lib:0.1.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
 }
