chore: upgrade root-beer and other Android related dependencies and configurations

--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.w3conext.jailbreak_root_detection_example">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:name="${applicationName}"
