chore: update dependencies and configurations
This commit updates various dependencies and configurations across the project.

- Updates pubspec.lock and example/pubspec.lock with new dependency versions and hash values.
- Modifies example/android/app/build.gradle:
    - Updates ndkVersion.
    - Sets namespace.
    - Changes sourceCompatibility and targetCompatibility to JavaVersion.VERSION_11.
    - Adds kotlinOptions with jvmTarget = '11'.
- Updates SDK constraints in example/pubspec.yaml and pubspec.yaml.
- Updates flutter_lints version in example/pubspec.yaml and pubspec.yaml.
- Modifies example/android/gradle.properties by removing some Android properties.
- Updates android/build.gradle:
    - Changes ext.kotlin_version.
    - Updates compileSdkVersion.
    - Changes sourceCompatibility and targetCompatibility to JavaVersion.VERSION_11.
    - Adds kotlinOptions with jvmTarget = '11'.
    - Sets namespace.

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -24,11 +24,16 @@ if (flutterVersionName == null) {
 
 android {
     compileSdkVersion 36
-    ndkVersion "25.0.8775105"
+    ndkVersion "27.0.12077973"
+    namespace 'com.w3conext.jailbreak_root_detection_example'
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_21
-        targetCompatibility JavaVersion.VERSION_21
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+
+    kotlinOptions {
+        jvmTarget = '11'
     }
 
     sourceSets {
