chore: remove out/ and add Flutter related files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -115,7 +115,6 @@ Temporary Items
 # Generated files
 bin/
 gen/
-out/
 #  Uncomment the following line in case you need and you don't have the release build type files in your app
 # release/
 
@@ -189,4 +188,7 @@ lint/tmp/
 # Android Profiling
 *.hprof
 
+# Flutter/Dart/Pub related
+# Libraries should not include pubspec.lock, per https://dart.dev/guides/libraries/private-files#pubspec-lock.
+/pubspec.lock
 .dart_tool/
