--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,1 +1,13 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+    plugins {
+        id 'com.android.library' version "${AGPVersion}"
+        id 'org.jetbrains.kotlin.android' version "${kotlin_version}"
+    }
+}
+
 rootProject.name = 'jailbreak_root_detection'
