--- a/.github/workflows/flutter_plugin.yml
+++ b/.github/workflows/flutter_plugin.yml
@@ -2,7 +2,7 @@ name: Flutter Plugin CI
 
 on:
   push:
-    branches: [main, config/ci]
+    branches: [main, migrate/gradle]
   pull_request:
     branches: [main]
 
@@ -12,6 +12,12 @@ jobs:
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: "17"
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
