--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,1 +1,22 @@
+pluginManagement {
+  repositories {
+    google()
+    mavenCentral()
+    gradlePluginPortal()
+  }
+}
+
+plugins {
+  id "com.android.library"     version "8.6.0" apply false
+  id "org.jetbrains.kotlin.android" version "2.1.0" apply false
+}
+
+dependencyResolutionManagement {
+  repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+  repositories {
+    google()
+    mavenCentral()
+  }
+}
+
 rootProject.name = 'jailbreak_root_detection'
